@@ -1,5 +1,10 @@
 2007-10-27  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/mkgen.pl: set the svn:ignore property instead of
+	writing a .cvsignore file.
+
+2007-10-27  Sven Neumann  <sven@gimp.org>
+
 	* libgimpconfig/gimpcolorconfig.h (struct _GimpColorConfig):
 	declared the fields as public so that they show up in the API
 	documentation.
